tests/single_instruction_translation_validation/mcsema/register-variants-samereg/punpckhwd_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:206:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %17)
            ^
0.02user 0.02system 0:00.11elapsed 44%CPU (0avgtext+0avgdata 27424maxresident)k
0inputs+16outputs (0major+3242minor)pagefaults 0swaps
